tests/sumo/errors/duplicates/route_oldstyle_plainemission/errors.sumo
Error: Another route (or distribution) with the id '0' exists.
Quitting (on error).
